--- a/client/package.json
+++ b/client/package.json
@@ -13,10 +13,12 @@
     "react-icons": "^4.3.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-slick": "^0.28.1",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "craco start",
+    "start": "set PORT=3444 && craco start",
     "build": "craco build",
     "test": "craco test",
     "eject": "react-scripts eject"
